--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
-    "server": "cd server && nodemon ./bin/www",
-    "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
+    "dev-server": "cd server && nodemon ./bin/www",
+    "server": "cd server && node ./bin/www",
+    "develop": "concurrently --kill-others-on-fail \"npm run dev-server\" \"npm run start --prefix client\"",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
     "clientstart": "cd client && npm start",
     "devserverstart": "SET DEBUG=express-locallibrary-tutorial:* | npm run serverstart"
